# backend

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  .vercelignore  ARCHITECTURE-AGENTS.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  PROJEKTANALYSE.md  README.md  SERVER_STATUS.md  VERCEL_CHECKLIST.md  VERCEL_DEPLOYMENT.md  _patch_doctors.diff  api-client.ts  build_files.sh  check_vercel_readiness.py  deploy.ps1  deploy.sh  dev.sqlite3  docker-compose.dev.yml  docker-compose.prod.yml  generate_secret_key.py  job-63304384643-logs.txt  manage.py  op_kpis.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  temp_agent_engine.yml  test nach rename.txt  tsconfig.json  vercel.json
.github/: CODEOWNERS  copilot-instructions.md
agent-outputs/: auth-validator.json
api/: process-logs.ts
appointments/: __init__.py  models.py  serializers.py  views.py
automation/: issues.generated.json  issues.json  project-import.yml
core/: __init__.py  models.py
dashboard/: dashboard.html
docker/: init-db.sh  nginx.conf
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  ONBOARDING.md  STAGE2-IMPLEMENTATION-SUMMARY.md  ci-cd-troubleshooting.md  github-actions-workflow-name-path-bug.md  postgresql_only_checklist.md  stabilization-epics.md
e2e/: appointment-modal.spec.ts  navigation.spec.ts  patients.spec.ts
fix-agent/: input.json  metadata-unknown.json
fixtures/: auth.setup.ts  testdata.setup.ts
logs/: .gitkeep
pages/: calendar-page.ts  nav-page.ts  operations-page.ts  scheduling-kpis-page.ts
(+324 files in other folders)
