[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "praxiapp-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0,<6.0",
    "djangorestframework>=3.15,<4.0",
    "djangorestframework-simplejwt>=5.3,<6.0",
    "psycopg[binary]>=3.1,<4.0",
    "django-cors-headers>=4.3,<5.0",
    "python-dotenv>=1.0,<2.0",
    "whitenoise>=6.6,<7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff.lint]
# Keep this deliberately small: catch real errors (F), basic style (E), and import sorting (I).
# Keep this deliberately small: catch real errors (F) and basic style issues (E).
# Import sorting is handled by isort.
select = ["E", "F"]

# Black handles line-length wrapping; avoid conflicting E501 noise.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Django settings commonly use star-import overrides; Ruff can't reliably infer names.
"backend/praxi_backend/settings/*.py" = ["F403", "F405"]
"backend/praxi_backend/settings_*.py" = ["F403", "F405"]
